cmake_minimum_required(VERSION 3.16)

project(guruxdlms LANGUAGES CXX)

# Set C++11 standard as used in the original qmake project
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Set library type (can be changed to SHARED if needed)
set(LIBRARY_TYPE STATIC)

# Define source files from development/src/
set(SOURCES
    development/src/GXAdjacentCell.cpp
    development/src/GXAPDU.cpp
    development/src/GXApplicationContextName.cpp
    development/src/GXAuthenticationMechanismName.cpp
    development/src/GXBitString.cpp
    development/src/GXBytebuffer.cpp
    development/src/GXChargePerUnitScaling.cpp
    development/src/GXChargeTable.cpp
    development/src/GXCipher.cpp
    development/src/GXByteArray.cpp
    development/src/GXEcdsa.cpp
    development/src/GXPublicKey.cpp
    development/src/GXPkcs10.cpp
    development/src/GXBigInteger.cpp
    development/src/GXx509Certificate.cpp
    development/src/GXAsn1Variant.cpp
    development/src/GXAsn1Converter.cpp
    development/src/GXAsn1Context.cpp
    development/src/GXShamirs.cpp
    development/src/GXDLMSSha384.cpp
    development/src/GXCommodity.cpp
    development/src/GXCreditChargeConfiguration.cpp
    development/src/GXCurrency.cpp
    development/src/GXDateTime.cpp
    development/src/GXDLMS.cpp
    development/src/GXDLMSAccessItem.cpp
    development/src/GXDLMSAccount.cpp
    development/src/GXDLMSActionItem.cpp
    development/src/GXDLMSActionSchedule.cpp
    development/src/GXDLMSActionSet.cpp
    development/src/GXDLMSActivityCalendar.cpp
    development/src/GXDLMSArbitrator.cpp
    development/src/GXDLMSAssociationLogicalName.cpp
    development/src/GXDLMSAssociationShortName.cpp
    development/src/GXDLMSAutoAnswer.cpp
    development/src/GXDLMSAutoConnect.cpp
    development/src/GXDLMSCaptureObject.cpp
    development/src/GXDLMSCertificateInfo.cpp
    development/src/GXDLMSCharge.cpp
    development/src/GXDLMSClient.cpp
    development/src/GXDLMSClock.cpp
    development/src/GXDLMSCommunicationPortProtection.cpp
    development/src/GXDLMSCompactData.cpp
    development/src/GXDLMSContextType.cpp
    development/src/GXDLMSConverter.cpp
    development/src/GXDLMSCredit.cpp
    development/src/GXDLMSData.cpp
    development/src/GXDLMSDayProfile.cpp
    development/src/GXDLMSDayProfileAction.cpp
    development/src/GXDLMSDemandRegister.cpp
    development/src/GXDLMSDisconnectControl.cpp
    development/src/GXDLMSEmergencyProfile.cpp
    development/src/GXDLMSExtendedRegister.cpp
    development/src/GXDLMSGPRSSetup.cpp
    development/src/GXDLMSGSMCellInfo.cpp
    development/src/GXDLMSGSMDiagnostic.cpp
    development/src/GXDLMSHdlcSetup.cpp
    development/src/GXDLMSIec8802LlcType1Setup.cpp
    development/src/GXDLMSIec8802LlcType2Setup.cpp
    development/src/GXDLMSIec8802LlcType3Setup.cpp
    development/src/GXDLMSIECOpticalPortSetup.cpp
    development/src/GXDLMSIecTwistedPairSetup.cpp
    development/src/GXDLMSImageActivateInfo.cpp
    development/src/GXDLMSImageTransfer.cpp
    development/src/GXDLMSIp4Setup.cpp
    development/src/GXDLMSIp4SetupIpOption.cpp
    development/src/GXDLMSIp6Setup.cpp
    development/src/GXDLMSLimiter.cpp
    development/src/GXDLMSLlcSscsSetup.cpp
    development/src/GXDLMSLNCommandHandler.cpp
    development/src/GXDLMSLNParameters.cpp
    development/src/GXDLMSMacAddressSetup.cpp
    development/src/GXDLMSMBusClient.cpp
    development/src/GXDLMSMBusMasterPortSetup.cpp
    development/src/GXDLMSMBusSlavePortSetup.cpp
    development/src/GXDLMSMd5.cpp
    development/src/GXDLMSMessageHandler.cpp
    development/src/GXDLMSModemConfiguration.cpp
    development/src/GXDLMSModemInitialisation.cpp
    development/src/GXDLMSMonitoredValue.cpp
    development/src/GXDLMSNotify.cpp
    development/src/GXDLMSNtpSetup.cpp
    development/src/GXDLMSObject.cpp
    development/src/GXDLMSObjectCollection.cpp
    development/src/GXDLMSObjectDefinition.cpp
    development/src/GXDLMSObjectFactory.cpp
    development/src/GXDLMSParameterMonitor.cpp
    development/src/GXDLMSPppSetup.cpp
    development/src/GXDLMSPppSetupIPCPOption.cpp
    development/src/GXDLMSPppSetupLcpOption.cpp
    development/src/GXDLMSPrimeNbOfdmPlcApplicationsIdentification.cpp
    development/src/GXDLMSPrimeNbOfdmPlcMacCounters.cpp
    development/src/GXDLMSPrimeNbOfdmPlcMacFunctionalParameters.cpp
    development/src/GXDLMSPrimeNbOfdmPlcMacNetworkAdministrationData.cpp
    development/src/GXDLMSPrimeNbOfdmPlcMacSetup.cpp
    development/src/GXDLMSPrimeNbOfdmPlcPhysicalLayerCounters.cpp
    development/src/GXDLMSProfileGeneric.cpp
    development/src/GXDLMSPushObject.cpp
    development/src/GXDLMSPushSetup.cpp
    development/src/GXDLMSQualityOfService.cpp
    development/src/GXDLMSRegister.cpp
    development/src/GXDLMSRegisterActivation.cpp
    development/src/GXDLMSRegisterMonitor.cpp
    development/src/GXDLMSSapAssignment.cpp
    development/src/GXDLMSSchedule.cpp
    development/src/GXDLMSScheduleEntry.cpp
    development/src/GXDLMSScript.cpp
    development/src/GXDLMSScriptAction.cpp
    development/src/GXDLMSScriptTable.cpp
    development/src/GXDLMSSeasonProfile.cpp
    development/src/GXDLMSSecureClient.cpp
    development/src/GXDLMSSecureServer.cpp
    development/src/GXDLMSSecuritySetup.cpp
    development/src/GXDLMSServer.cpp
    development/src/GXDLMSSettings.cpp
    development/src/GXDLMSSFSKActiveInitiator.cpp
    development/src/GXDLMSSFSKMacCounters.cpp
    development/src/GXDLMSSFSKMacSynchronizationTimeouts.cpp
    development/src/GXDLMSSFSKPhyMacSetUp.cpp
    development/src/GXDLMSSFSKReportingSystemList.cpp
    development/src/GXDLMSSha1.cpp
    development/src/GXDLMSSha256.cpp
    development/src/GXDLMSSNCommandHandler.cpp
    development/src/GXDLMSSNParameters.cpp
    development/src/GXDLMSSpecialDay.cpp
    development/src/GXDLMSSpecialDaysTable.cpp
    development/src/GXDLMSTarget.cpp
    development/src/GXDLMSTcpUdpSetup.cpp
    development/src/GXDLMSTokenGateway.cpp
    development/src/GXDLMSTranslator.cpp
    development/src/GXDLMSTranslatorStructure.cpp
    development/src/GXDLMSUtilityTables.cpp
    development/src/GXDLMSValueEventArg.cpp
    development/src/GXDLMSVariant.cpp
    development/src/GXDLMSWeekProfile.cpp
    development/src/GXHdlcSettings.cpp
    development/src/GXHelpers.cpp
    development/src/GXPlcSettings.cpp
    development/src/GXReplyData.cpp
    development/src/GXSecure.cpp
    development/src/GXSerialNumberCounter.cpp
    development/src/GXSNInfo.cpp
    development/src/GXStandardObisCode.cpp
    development/src/GXStandardObisCodeCollection.cpp
    development/src/GXTokenGatewayConfiguration.cpp
    development/src/GXUnitCharge.cpp
    development/src/GXXmlReader.cpp
    development/src/GXXmlWriter.cpp
    development/src/GXXmlWriterSettings.cpp
    development/src/GXPkcs8.cpp
    development/src/GXPrivateKey.cpp
)

# Define header files from development/include/
set(HEADERS
    development/include/chipperingenums.h
    development/include/enums.h
    development/include/errorcodes.h
    development/include/GXAdjacentCell.h
    development/include/GXAPDU.h
    development/include/GXApplicationContextName.h
    development/include/GXAttributeCollection.h
    development/include/GXAuthentication.h
    development/include/GXAuthenticationMechanismName.h
    development/include/GXBitString.h
    development/include/GXBytebuffer.h
    development/include/GXChargePerUnitScaling.h
    development/include/GXChargeTable.h
    development/include/GXCipher.h
    development/include/GXCommodity.h
    development/include/GXCreditChargeConfiguration.h
    development/include/GXCurrency.h
    development/include/GXDataInfo.h
    development/include/GXDate.h
    development/include/GXDateTime.h
    development/include/GXDLMS.h
    development/include/GXDLMSAccessItem.h
    development/include/GXDLMSAccount.h
    development/include/GXDLMSActionItem.h
    development/include/GXDLMSActionSchedule.h
    development/include/GXDLMSActionSet.h
    development/include/GXDLMSActivityCalendar.h
    development/include/GXDLMSArbitrator.h
    development/include/GXDLMSAssociationLogicalName.h
    development/include/GXDLMSAssociationShortName.h
    development/include/GXDLMSAttribute.h
    development/include/GXDLMSAutoAnswer.h
    development/include/GXDLMSAutoConnect.h
    development/include/GXDLMSCaptureObject.h
    development/include/GXDLMSCertificateInfo.h
    development/include/GXDLMSCharge.h
    development/include/GXDLMSClient.h
    development/include/GXDLMSClock.h
    development/include/GXDLMSCommunicationPortProtection.h
    development/include/GXDLMSCompactData.h
    development/include/GXDLMSConnectionEventArgs.h
    development/include/GXDLMSContextType.h
    development/include/GXDLMSConverter.h
    development/include/GXDLMSCredit.h
    development/include/GXDLMSData.h
    development/include/GXDLMSDayProfile.h
    development/include/GXDLMSDayProfileAction.h
    development/include/GXDLMSDemandRegister.h
    development/include/GXDLMSDisconnectControl.h
    development/include/GXDLMSEmergencyProfile.h
    development/include/GXDLMSExtendedRegister.h
    development/include/GXDLMSGPRSSetup.h
    development/include/GXDLMSGSMCellInfo.h
    development/include/GXDLMSGSMDiagnostic.h
    development/include/GXDLMSHdlcSetup.h
    development/include/GXDLMSIec8802LlcType1Setup.h
    development/include/GXDLMSIec8802LlcType2Setup.h
    development/include/GXDLMSIec8802LlcType3Setup.h
    development/include/GXDLMSIECOpticalPortSetup.h
    development/include/GXDLMSIecTwistedPairSetup.h
    development/include/GXDLMSImageActivateInfo.h
    development/include/GXDLMSImageTransfer.h
    development/include/GXDLMSIp4Setup.h
    development/include/GXDLMSIp4SetupIpOption.h
    development/include/GXDLMSIp6Setup.h
    development/include/GXDLMSLimiter.h
    development/include/GXDLMSLimits.h
    development/include/GXDLMSLlcSscsSetup.h
    development/include/GXDLMSLNCommandHandler.h
    development/include/GXDLMSLNParameters.h
    development/include/GXDLMSLongTransaction.h
    development/include/GXDLMSMacAddressSetup.h
    development/include/GXDLMSMBusClient.h
    development/include/GXDLMSMBusMasterPortSetup.h
    development/include/GXDLMSMBusSlavePortSetup.h
    development/include/GXDLMSMd5.h
    development/include/GXDLMSMessageHandler.h
    development/include/GXDLMSModemConfiguration.h
    development/include/GXDLMSModemInitialisation.h
    development/include/GXDLMSMonitoredValue.h
    development/include/GXDLMSNotify.h
    development/include/GXDLMSNtpSetup.h
    development/include/GXDLMSObject.h
    development/include/GXDLMSObjectCollection.h
    development/include/GXDLMSObjectDefinition.h
    development/include/GXDLMSObjectFactory.h
    development/include/GXDLMSParameterMonitor.h
    development/include/GXDLMSPlcMeterInfo.h
    development/include/GXDLMSPlcRegister.h
    development/include/GXDLMSPppSetup.h
    development/include/GXDLMSPppSetupIPCPOption.h
    development/include/GXDLMSPppSetupLcpOption.h
    development/include/GXDLMSPrimeNbOfdmPlcApplicationsIdentification.h
    development/include/GXDLMSPrimeNbOfdmPlcMacCounters.h
    development/include/GXDLMSPrimeNbOfdmPlcMacFunctionalParameters.h
    development/include/GXDLMSPrimeNbOfdmPlcMacNetworkAdministrationData.h
    development/include/GXDLMSPrimeNbOfdmPlcMacSetup.h
    development/include/GXDLMSPrimeNbOfdmPlcPhysicalLayerCounters.h
    development/include/GXDLMSProfileGeneric.h
    development/include/GXDLMSPushObject.h
    development/include/GXDLMSPushSetup.h
    development/include/GXDLMSQualityOfService.h
    development/include/GXDLMSRegister.h
    development/include/GXDLMSRegisterActivation.h
    development/include/GXDLMSRegisterMonitor.h
    development/include/GXDLMSSapAssignment.h
    development/include/GXDLMSSchedule.h
    development/include/GXDLMSScheduleEntry.h
    development/include/GXDLMSScript.h
    development/include/GXDLMSScriptAction.h
    development/include/GXDLMSScriptTable.h
    development/include/GXDLMSSeasonProfile.h
    development/include/GXDLMSSecureClient.h
    development/include/GXDLMSSecureServer.h
    development/include/GXDLMSSecuritySetup.h
    development/include/GXDLMSServer.h
    development/include/GXDLMSSettings.h
    development/include/GXDLMSSFSKActiveInitiator.h
    development/include/GXDLMSSFSKMacCounters.h
    development/include/GXDLMSSFSKMacSynchronizationTimeouts.h
    development/include/GXDLMSSFSKPhyMacSetUp.h
    development/include/GXDLMSSFSKReportingSystemList.h
    development/include/GXDLMSSha1.h
    development/include/GXDLMSSha256.h
    development/include/GXDLMSSNCommandHandler.h
    development/include/GXDLMSSNParameters.h
    development/include/GXDLMSSpecialDay.h
    development/include/GXDLMSSpecialDaysTable.h
    development/include/GXDLMSTarget.h
    development/include/GXDLMSTcpUdpSetup.h
    development/include/GXDLMSTokenGateway.h
    development/include/GXDLMSTranslator.h
    development/include/GXDLMSTranslatorStructure.h
    development/include/GXDLMSUtilityTables.h
    development/include/GXDLMSValueEventArg.h
    development/include/GXDLMSValueEventCollection.h
    development/include/GXDLMSVariant.h
    development/include/GXDLMSWeekProfile.h
    development/include/GXHdlcSettings.h
    development/include/GXHelpers.h
    development/include/GXIgnore.h
    development/include/GXMacAvailableSwitch.h
    development/include/GXMacDirectTable.h
    development/include/GXMacMulticastEntry.h
    development/include/GXMacPhyCommunication.h
    development/include/GXMBusClientData.h
    development/include/GXNeighborDiscoverySetup.h
    development/include/GXPlcSettings.h
    development/include/GXReplyData.h
    development/include/GXSecure.h
    development/include/GXSerialNumberCounter.h
    development/include/GXServerReply.h
    development/include/GXSNInfo.h
    development/include/GXStandardObisCode.h
    development/include/GXStandardObisCodeCollection.h
    development/include/GXTime.h
    development/include/GXTokenGatewayConfiguration.h
    development/include/GXUnitCharge.h
    development/include/GXXmlReader.h
    development/include/GXXmlWriter.h
    development/include/GXXmlWriterSettings.h
    development/include/IGXDLMSBase.h
    development/include/OBiscodes.h
    development/include/TranslatorGeneralTags.h
    development/include/TranslatorSimpleTags.h
    development/include/TranslatorStandardTags.h
    development/include/TranslatorTags.h
    development/include/GXPkcs8.h
)

# Create the library
add_library(guruxdlms ${LIBRARY_TYPE}
    ${SOURCES}
    ${HEADERS}
)

# Set include directories
target_include_directories(guruxdlms PUBLIC
    development/include
)

# Set compile definitions if needed
target_compile_definitions(guruxdlms PRIVATE
    GURUXDLMS_LIBRARY
)

# Optional: Set output directory
set_target_properties(guruxdlms PROPERTIES
    OUTPUT_NAME guruxdlms
    VERSION 1.0.0
    SOVERSION 1
)

